[package]
name = "reference-value-provider-service"
version = "0.1.0"
edition = "2021"

[features]
default = [ "bin" ]
# Used to build rvps binary
bin = [ "clap", "env_logger", "prost", "shadow-rs", "tokio", "tonic" ]

[[bin]]
name = "rvps"
required-features = [ "bin" ]

[[bin]]
name = "rvps-tool"
required-features = [ "bin" ]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
cfg-if.workspace = true
chrono = { workspace = true, features = [ "serde" ] }
clap = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
log.workspace = true
prost = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
shadow-rs = { workspace = true, optional = true }
sled = "0.34.7"
strum.workspace = true
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
serial_test.workspace = true
tempfile = "3.3.0"
tokio.workspace = true
