[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[features]
default = ["all-verifier"]
all-verifier = [
    "tdx-verifier",
    "sgx-verifier",
    "snp-verifier",
    "az-snp-vtpm-verifier",
    "az-tdx-vtpm-verifier",
    "csv-verifier",
    "cca-verifier",
]
tdx-verifier = ["eventlog-rs", "scroll", "sgx-dcap-quoteverify-rs"]
sgx-verifier = ["scroll", "sgx-dcap-quoteverify-rs"]
az-snp-vtpm-verifier = ["az-snp-vtpm", "sev", "snp-verifier"]
az-tdx-vtpm-verifier = ["az-tdx-vtpm", "openssl", "tdx-verifier"]
snp-verifier = ["asn1-rs", "openssl", "sev", "x509-parser"]
csv-verifier = ["openssl", "csv-rs", "codicon"]
cca-verifier = ["ear", "veraison-apiclient"]

[dependencies]
anyhow.workspace = true
asn1-rs = { version = "0.5.1", optional = true }
async-trait.workspace = true
az-snp-vtpm = { version = "0.4.1", default-features = false, features = [
    "verifier",
], optional = true }
az-tdx-vtpm = { version = "0.4.1", default-features = false, features = [
    "verifier",
], optional = true }
base64 = "0.21"
bincode = "1.3.3"
byteorder = "1"
cfg-if = "1.0.0"
codicon = { version = "3.0", optional = true }
# TODO: change it to "0.1", once released.
csv-rs = { git = "https://github.com/openanolis/csv-rs", rev = "b74aa8c", optional = true }
eventlog-rs = { version = "0.1.3", optional = true }
hex.workspace = true
jsonwebtoken = "8"
kbs-types.workspace = true
log.workspace = true
openssl = { version = "0.10.55", optional = true }
scroll = { version = "0.11.0", default-features = false, features = [
    "derive",
], optional = true }
serde.workspace = true
serde_json.workspace = true
sev = { version = "1.2.0", features = ["openssl", "snp"], optional = true }
sgx-dcap-quoteverify-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.16", optional = true }
strum.workspace = true
veraison-apiclient = { git = "https://github.com/chendave/rust-apiclient", branch = "token", optional = true }
ear = { git = "https://github.com/veraison/rust-ear", rev = "cc6ea53", optional = true }
x509-parser = { version = "0.14.0", optional = true }

[build-dependencies]
shadow-rs.workspace = true
tonic-build.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true
serial_test.workspace = true
tokio.workspace = true
