[package]
name = "api-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["attestation-service/default"]
no-verifier = ["attestation-service/in-toto", "attestation-service/rvps-server"]

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
aes-gcm = "0.10.1"
anyhow.workspace = true
async-trait.workspace = true
attestation-service.workspace = true
base64.workspace = true
env_logger.workspace = true
lazy_static = "1.4.0"
log.workspace = true
kbs-types = { git = "https://github.com/virtee/kbs-types.git", rev = "13b9378f" }
rand = "0.8.5"
rsa = "0.7.2"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
semver = "1.0.16"
strum = "0.24.1"
strum_macros = "0.24.1"
tokio.workspace = true
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
tempfile.dev-workspace = true
