[package]
name = "kbs"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["native-as", "rustls"]
native-as = ["api-server/native-as"]
native-as-no-verifier = ["api-server/native-as-no-verifier"]
grpc-as = ["api-server/grpc-as"]
rustls = ["api-server/rustls"]
openssl = ["api-server/openssl"]

[dependencies]
anyhow.workspace = true
api-server.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
