[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-types.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
env_logger.workspace = true
jwt-simple.workspace = true
kbs_protocol = { git = "https://github.com/jialez0/attestation-agent", branch = "token" }
log.workspace = true
reqwest = { version = "0.11.13", default-features = false, features = ["cookies", "json"] }
serde_json.workspace = true
tokio.workspace = true