[package]
name = "kbs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "kbs-client"
path = "src/main.rs"

[dependencies]
# TODO: change it to "0.8.0", once released.
as-types = { git = "https://github.com/confidential-containers/attestation-service.git", rev = "9ef001e" }
anyhow.workspace = true
api-server.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
jwt-simple = "0.11.4"
kbs_protocol = { git = "https://github.com/confidential-containers/guest-components", rev = "dc15fdc" }
log.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "json"] }
serde_json.workspace = true
tokio.workspace = true
