[package]
name = "kbs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "kbs-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = { version = "4.5.59", features = ["derive"] }
env_logger.workspace = true
jsonwebtoken.workspace = true
kbs_protocol = { workspace = true, default-features = false, features = ["background_check", "passport"] }
log.workspace = true
reqwest = { workspace = true, default-features = false, features = ["cookies", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

[features]
default = []

all-attesters = ["kbs_protocol/all-attesters"]
tdx-attester = ["kbs_protocol/tdx-attester"]
sgx-attester = ["kbs_protocol/sgx-attester"]
az-snp-vtpm-attester = ["kbs_protocol/az-snp-vtpm-attester"]
az-tdx-vtpm-attester = ["kbs_protocol/az-tdx-vtpm-attester"]
snp-attester = ["kbs_protocol/snp-attester"]
csv-attester = ["kbs_protocol/csv-attester"]
cca-attester = ["kbs_protocol/cca-attester"]
se-attester  = ["kbs_protocol/se-attester"]
tpm-attester = ["kbs_protocol/tpm-attester"]
