[package]
name = "rvps-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.2.6"
env_logger = "0.9.1"
log = "0.4.17"
prost = "0.11.0"
shadow-rs = "0.19.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.8.1"

[build-dependencies]
shadow-rs = "0.19.0"
tonic-build = "0.8.0"