[package]
name = "trustee-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[[bin]]
name = "trustee"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
attestation-service = { path = "../../attestation-service" }
clap = { workspace = true, features = ["string"] }
dirs = "6.0.0"
env_logger.workspace = true
kbs = { path = "../../kbs" }
log.workspace = true
nix = { version = "0.30.1", features = ["user"] }
openssl.workspace = true
reference-value-provider-service = { path = "../../rvps" }
tokio.workspace = true
