[package]
name = "api-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["coco-as-builtin", "resource", "opa", "rustls"]
resource = ["rsa", "aes-gcm"]
as = []
policy = []
opa = ["policy"]
coco-as = ["as"]
coco-as-builtin = ["coco-as", "attestation-service/default"]
coco-as-builtin-no-verifier = ["coco-as", "attestation-service/rvps-builtin"]
coco-as-grpc = ["coco-as", "tonic", "tonic-build", "prost"]
amber-as = ["as", "reqwest", "jsonwebtoken"]
rustls = ["actix-web/rustls", "dep:rustls", "dep:rustls-pemfile"]
openssl = ["actix-web/openssl", "dep:openssl"]

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
aes-gcm = { version = "0.10.1", optional = true }
anyhow.workspace = true
async-trait.workspace = true
attestation-service = { path = "../../../attestation-service/attestation-service", default-features = false, optional = true }
base64.workspace = true
cfg-if.workspace = true
clap = { version = "4.3.21", features = ["derive", "env"] }
config = "0.13.3"
env_logger.workspace = true
jsonwebtoken = { version = "8", default-features = false, optional = true }
jwt-simple = "0.11.6"
# TODO: change it to "0.5", once released.
kbs-types = { git = "https://github.com/virtee/kbs-types", rev = "c90df0e" }
lazy_static = "1.4.0"
log.workspace = true
prost = { version = "0.11", optional = true }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"], optional = true }
rsa = { version = "0.9.2", optional = true, features = ["sha2"] }
rustls = { version = "0.20.8", optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
strum = "0.25.0"
strum_macros = "0.24.1"
thiserror.workspace = true
time = { version = "0.3.23", features = ["std"] }
tokio.workspace = true
tonic = { version = "0.9", optional = true }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
openssl = { version = "0.10.46", optional = true }

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true

[build-dependencies]
anyhow = "1"
tonic-build = { version = "0.8", optional = true }
