[package]
name = "api-server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["coco-as-builtin", "resource", "opa", "rustls"]
resource = ["rsa", "aes-gcm"]
as = []
policy = []
opa = ["policy"]
coco-as = ["as"]
coco-as-builtin = ["coco-as", "attestation-service/default"]
coco-as-builtin-no-verifier = ["coco-as", "attestation-service/rvps-builtin"]
coco-as-grpc = ["coco-as", "mobc", "tonic", "tonic-build", "prost"]
intel-trust-authority-as = ["as", "reqwest", "jsonwebtoken"]
rustls = ["actix-web/rustls", "dep:rustls", "dep:rustls-pemfile"]
openssl = ["actix-web/openssl", "dep:openssl"]

[dependencies]
actix-web.workspace = true
actix-web-httpauth.workspace = true
aes-gcm = { version = "0.10.1", optional = true }
anyhow.workspace = true
async-trait.workspace = true
attestation-service = { path = "../../../attestation-service/attestation-service", default-features = false, optional = true }
base64.workspace = true
cfg-if.workspace = true
clap = { version = "4.3.21", features = ["derive", "env"] }
config = "0.13.3"
env_logger.workspace = true
jsonwebtoken = { version = "8", default-features = false, optional = true }
jwt-simple = "0.11.6"
kbs-types.workspace = true
lazy_static = "1.4.0"
log.workspace = true
mobc = { version = "0.8.3", optional = true }
prost = { version = "0.11", optional = true }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"], optional = true }
rsa = { version = "0.9.2", optional = true, features = ["sha2"] }
rustls = { version = "0.20.8", optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
scc = "2"
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
strum = "0.25.0"
strum_macros = "0.24.1"
thiserror.workspace = true
time = { version = "0.3.23", features = ["std"] }
tokio.workspace = true
tonic = { version = "0.9", optional = true }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
openssl = { version = "0.10.46", optional = true }

[dev-dependencies]
tempfile.workspace = true
rstest.workspace = true

[build-dependencies]
anyhow = "1"
tonic-build = { version = "0.8", optional = true }
