[package]
name = "kbs"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["coco-as-builtin", "resource", "opa", "rustls"]
as = []
resource = ["api-server/resource"]
opa = ["api-server/opa"]
coco-as-builtin = ["as", "api-server/coco-as-builtin"]
coco-as-builtin-no-verifier = ["as", "api-server/coco-as-builtin-no-verifier"]
coco-as-grpc = ["as", "api-server/coco-as-grpc"]
intel-trust-authority-as = ["as", "api-server/intel-trust-authority-as"]
rustls = ["api-server/rustls"]
openssl = ["api-server/openssl"]

[dependencies]
anyhow.workspace = true
api-server.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
cfg-if.workspace = true
