[package]
name = "kbs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "kbs-client"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
api-server.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
env_logger.workspace = true
jwt-simple = "0.11.4"
# TODO: change the git repo after https://github.com/confidential-containers/guest-components/pull/406 is merged.
kbs_protocol = { git = "https://github.com/Xynnn007/guest-components.git", rev = "b2f863f" }
log.workspace = true
reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
